@@ -11,6 +11,10 @@ BUGFIXES:
   ZOOKEEPER-735. cppunit test testipv6 assumes that the machine is ipv6
   enabled. (mahadev)
 
+  ZOOKEEPER-720. Use zookeeper-{version}-sources.jar instead of
+  zookeeper-{version}-src.jar to publish sources in the Maven repository
+  (paolo via phunt)
+
 IMPROVEMENTS:
   ZOOKEEPER-724. Improve junit test integration - log harness information 
   (phunt via mahadev)
